--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "license": "MIT",
   "devDependencies": {
     "amdclean": "^2.3.0",
-    "connect-livereload": "^0.4.0",
+    "connect-livereload": "^0.4.1",
     "grunt": "^0.4.5",
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-html-build": "^0.3.2",
     "grunt-open": "^0.2.3"
   }
 }
