--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "amdclean": "^2.3.0",
     "connect-livereload": "^0.4.1",
     "grunt": "^0.4.5",
+    "grunt-build-control": "^0.1.3",
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-connect": "^0.8.0",
+    "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-html-build": "^0.3.2",
