--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-html-build": "^0.3.2",
-    "grunt-open": "^0.2.3"
+    "grunt-open": "^0.2.3",
+    "grunt-rev": "^0.1.0"
   }
 }
